# OZON-Similar-products

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PR_DESCRIPTION_V2.md  README.md  docker-compose.local-runner.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  local-heavy-pipeline.yml
apps/: __init__.py
apps/demo/: README.md  __init__.py  app.py  demo_data.py  texts.py
configs/: ALL_TUNING_EXPERIMENTS_SUMMARY.md  README.md  baseline.yaml  data.yaml  evaluation.yaml  final_best_fallback_config.yaml  paths.yaml  production.yaml
configs/experiments/defence/: 01_pair_count_raw.yaml  02_calibrated_multichannel_raw.yaml  03_calibrated_strong_weights_beta.yaml  04_calibrated_sqrt_transform.yaml  05_calibrated_thresholds_strict.yaml  06_calibrated_popularity_norm.yaml  07_pair_count_weighted_decay.yaml  08_calibrated_weighted_decay.yaml  09_widget_context_template.yaml  10_fallback_final.yaml
configs/tuning/: search_space.yaml  search_space_graph_scoring.yaml  search_space_scoring_core.yaml  search_space_scoring_fallback.yaml
data/: README.md
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
data/samples/: README.md
docs/: README.md  aggregate_pairs.md  architecture.md  calibrated_multichannel_weights.md  data_contract.md  data_io.md  demo_site_graph.md  evaluation_metrics.md  fallback_tuning_evaluation.md  graph_scoring_improvements.md  incremental_update.md  item_pair_builder.md  item_popularity_builder.md  local_runner.md  project_roadmap.md
docs/archive/: README.md
docs/modules/: data_layer.md
notebooks/: 01_eda.ipynb  README.md
outputs/: README.md
scripts/: README.md  check_project_structure.py  compare_experiments.py  compare_tuning.py  export_recommendation_graph.py  export_recommendation_preview.py  prepare_raw_data.py  preview_latest_recommendations.py  recover_tuning_sweep.py  run_experiment.py  run_full.py  run_mvp_pipeline.py  run_pipeline.py  run_tune.py  run_tune_with_cleanup.py
src/ozon_similar_products/: __init__.py  config.py  paths.py
tests/: README.md  test_aggregate_pairs.py  test_architecture_guardrails.py  test_build_pairs.py  test_build_sessions.py  test_business_evaluation_skeleton.py  test_clean_events.py  test_data_config.py  test_demo_data.py  test_demo_texts.py  test_evaluation_ground_truth.py  test_evaluation_ranking_options.py  test_graph_decay.py  test_imports.py  test_incremental_update.py  test_item_popularity.py  test_item_popularity_builder.py  test_loaders.py  test_lookup.py  test_mvp_interfaces_imports.py  test_paths.py  test_pipeline_interfaces_imports.py  test_prepare_raw_data.py  test_profiling.py  test_readers.py  test_recommendation_graph.py  test_recommendation_manifest.py  test_recommendation_output_integration.py  test_recommendation_writer.py  test_run_full.py  test_run_mvp.py  test_run_mvp_cli.py  test_run_pipeline.py  test_run_pipeline_cli.py  test_run_tune.py  test_schema_validation_types.py  test_schemas.py  test_scoring.py  test_scoring_only_tuning.py  test_scoring_output.py  (+3 more)
(+92 files in other folders)
