[project]
name = "ozon-similar-products"
version = "0.1.0"
description = "Offline pipeline skeleton for Ozon Fresh similar products recommendations."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.40.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
